--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="faves.html"> My Favorite Things </a></li>
       <li><a href="bagels.html"> Brownsville Bagels </a></li>
-      <li>more here...
+      <li><a href="allaboutgithub.html"> All About Github </a></li>
       <li>more here...
       <li>more here...
     </ul>
