--- a/allaboutgithub.html
+++ b/allaboutgithub.html
@@ -6,7 +6,7 @@
 	<title>All About Github</title>
 </head>
 
-<body>
+<body style="color:#38ff00;background-color:#000000;">
 	<h1>Q. What is a version control system?</h1>
 		<h2>	A. A version control system is a piece of software that allows development teams to track and manage chages to their source code.</h2>
 	<h1>Q. What is Git?
