--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <head>
     <title>JAkers</title>
   </head>
+  
+  <img src="BannerImage2.png" alt="Image made in class.">
+  
   <body>
     
     <h1>Joshua Claye Akers</h1>
