--- a/allaboutgithub.html
+++ b/allaboutgithub.html
@@ -22,7 +22,7 @@
 	<h1>Q. How much does a Github subscription cost?</h1>
 		<h2>A. Depending on the service chosen, the subscription cost starts at $48 and rises to $252.</h2>
 	<h1>Q.What is the Octocat?</h1>
-		<h2>A. The Octocat is an internal joke amongst Github developers. Part cat, part octopus, and 110% eating your code.</h2>
+		<h2>A. The Octocat is an internal joke amongst Github developers. It started as a design for Github's web pages, and later transformed into a community meme. The Octocat is part cat and part octopus, and it will consume your code.</h2>
 	<img src="YaBoiOctocat.png" alt="Octocat image by Cameron McEfee, The Octocat - A Nerdy Household Name">
 </body>
 </html>
