--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="faves.html"> My Favorite Things </a></li>
       <li><a href="bagels.html"> Brownsville Bagels </a></li>
       <li><a href="allaboutgithub.html"> All About Github </a></li>
-      <li>more here...
+      <li><a href="theplanets.html"> The Planets </a></li>
       <li>more here...
     </ul>
     
