--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="bagels.html"> Brownsville Bagels </a></li>
       <li><a href="allaboutgithub.html"> All About Github </a></li>
       <li><a href="theplanets.html"> The Planets </a></li>
-      <li>more here...
+      <li><a href="opsys.html"> System Definitions </a></li>
     </ul>
     
   </body>
