--- a/opsys.html
+++ b/opsys.html
@@ -50,7 +50,7 @@
 			<td>Represent items that can be manipulated (files, programs, etc.) in a visual form</td>
 		</tr>
 		<tr>
-			<td>Shell<td>
+			<td>Shell</td>
 			<td>Older form of user interface that displays files or programs via text</td>
 		</tr>
 		<tr>
