--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <li><a href="allaboutgithub.html"> All About Github </a></li>
       <li><a href="theplanets.html"> The Planets </a></li>
       <li><a href="opsys.html"> System Definitions </a></li>
+      <li><a href="arithmetic.html"> Simple Arithmetic </a></li>
     </ul>
     
   </body>
