--- a/arithmetic.html
+++ b/arithmetic.html
@@ -34,7 +34,8 @@
 		//display results
 			document.write("<h1 style="color:#7D3C98;"> Arithmetic Answers"+"br />");
 			document.write("addition of"+num1+"and"+num2+"equals"+addans+"<br />");
-	                document.write("</h2>")
+	                document.write("</h1>");
+			document.write(addans);
 			document.write(subdans);
 			document.write(multans);
 			document.write(divans);
