--- a/arithmetic.html
+++ b/arithmetic.html
@@ -47,7 +47,7 @@
 <body>
 	<form>
 		<input type="button" value="click here for arithmetic calculations"
-			class="calcbutton" onclick="calculate()"/>
+			class="calcbutton" onclick="calculate()">
 	</form>
 </body>
 
