--- a/arithmetic.html
+++ b/arithmetic.html
@@ -32,7 +32,7 @@
 			modans=num1%num2;
 		
 		//display results
-			document.write("<h1 style="color:#7D3C98;"> Arithmetic Answers"+"br />");
+			document.write(<h1 style="color:#7D3C98;"> "Arithmetic Answers"+"br />");
 			document.write("addition of"+num1+"and"+num2+"equals"+addans+"<br />");
 	                document.write("</h1>");
 			document.write(addans);
