--- a/arithmetic.html
+++ b/arithmetic.html
@@ -32,14 +32,13 @@
 			modans=num1%num2;
 		
 		//display results
-			document.write(<h1 style="color:#7D3C98;"> "Arithmetic Answers"+"br />");
-			document.write("addition of"+num1+"and"+num2+"equals"+addans+"<br />");
-	                document.write("</h1>");
-			document.write(addans);
-			document.write(subdans);
-			document.write(multans);
-			document.write(divans);
-			document.write(modans);
+			document.write("<h1 style='color:#7D3C98;'> Arithmetic Answers"+"<br />");
+			document.write("Addition of "+num1+" and "+num2+" equals "+addans+"<br />");
+			document.write("Subtraction of "+num1+" and "+num2+" equals "+subdans+"<br />");
+			document.write("Multiplication of "+num1+" and "+num2+" equals "+multans+"<br />");
+			document.write("Division of "+num1+" and "+num2+" equals "+divans+"<br />");
+			document.write("Modulus of "+num1+" and "+num2+" equals "+modans+"<br />");
+			document.write("</h1>");
 			
 			}
 		</script>
