--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <li><a href="theplanets.html"> The Planets </a></li>
       <li><a href="opsys.html"> System Definitions </a></li>
       <li><a href="arithmetic.html"> Simple Arithmetic </a></li>
+      <li><a href="bus_script.html"> Transportation Requirement Calculator </a></li>
     </ul>
     
   </body>
