--- a/bus_script.html
+++ b/bus_script.html
@@ -43,7 +43,7 @@
 <body>
 	<form>
 		<input type="button" value="Click here for the field trip bus requirements"
-			class="calcbutton" onclick="findnumbuses()" />
+			class="calcbutton" onclick="findnumbuses()">
 	</form>
 </body>
 
