--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <li><a href="opsys.html"> System Definitions </a></li>
       <li><a href="arithmetic.html"> Simple Arithmetic </a></li>
       <li><a href="bus_script.html"> Transportation Requirement Calculator </a></li>
+      <li><a href="chapter5.html"> Chapter 5 </a></li>
     </ul>
     
   </body>
