--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <h2>CSC110 Python</h2>
     <ul>
       <li><a href="tickets2.py"> Movie Tickets </a></li>
+      <li><a href="tuition.py"> Tuition Calculator</a></li>
     </ul>
     
   </body>
