--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <ul>
       <li><a href="tickets2.py"> Movie Tickets </a></li>
       <li><a href="tuition.py"> Tuition Calculator</a></li>
+      <li><a href="pizzacalc.py"> Pizza Calculator</a></li>
     </ul>
     
   </body>
