--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <li><a href="tickets2.py"> Movie Tickets </a></li>
       <li><a href="tuition.py"> Tuition Calculator</a></li>
       <li><a href="pizzacalc.py"> Pizza Calculator</a></li>
+      <li><a href="dogs.py" Doggo List</a></li>
     </ul>
     
   </body>
