--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <li><a href="arithmetic.html"> Simple Arithmetic </a></li>
       <li><a href="bus_script.html"> Transportation Requirement Calculator </a></li>
       <li><a href="chapter5.html"> Chapter 5 </a></li>
+      <li><a href="fillibuster_webpage.html"> Filibuster </a></li>
     </ul>
     
     <h2>CSC110 Python</h2>
@@ -54,6 +55,8 @@
       <li><a href="tuition.py"> Tuition Calculator</a></li>
       <li><a href="pizzacalc.py"> Pizza Calculator</a></li>
       <li><a href="dogs.py"> Doggo List</a></li>
+      <li><a href="genrandnum.py"> Random Number Generator </a></li>
+      <li><a href="magic8ball.py"> Magic 8 Ball </a></li>
     </ul>
     
   </body>
