--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <li><a href="dogs.py"> Doggo List</a></li>
       <li><a href="genrandnum.py"> Random Number Generator </a></li>
       <li><a href="magic8ball.py"> Magic 8 Ball </a></li>
+      <li><a href="PORDLE.zip"> Pordle (PVCC Wordle) </a></li>
     </ul>
     
   </body>
